--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     	</style>
     </head>
     <body>
-    	<iframe src="<https://litty-chatbot.streamlit.app/?embed_options=show_toolbar,show_padding,show_footer,dark_theme,show_colored_line>"
+    	<iframe src="<https://litty-chatbot.streamlit.app/>"
     			frameborder="0"
     			marginheight="0"
     			marginwidth="0"
