--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     	</style>
     </head>
     <body>
-    	<iframe src="<https://litty-chatbot.streamlit.app/>"
+    	<iframe src="<https://litty-chatbot.streamlit.app>"
     			frameborder="0"
     			marginheight="0"
     			marginwidth="0"
